# notifications

./: .env.template  README.md  compose.yml  dockerfile  makefile  pyproject.toml
app/: . coveragerc
app/app/: settings.py  urls.py
app/notification/: admin.py  exceptions.py  forms.py  models.py  urls.py  views.py
app/notification/gateway/: gateway.py  interface.py
app/notification/helpers/: rate_limiter.py
app/notification/management/commands/: populate_database.py
app/notification/migrations/: 0001_initial.py
app/notification/repositories/: interface.py  redis.py
app/notification/services/: notifications.py
app/notification/templates/notification/: solution.html
app/notification/tests/integration/: test_notification_service.py
app/notification/tests/unit/helpers/: test_rate_limiter.py
app/notification/tests/unit/management/commands/: test_populate_database.py
app/notification/tests/unit/services/: test_notifications.py
